--- a/about.html
+++ b/about.html
@@ -14,18 +14,23 @@ div {
     padding: 10px 30px 25px;
     border: 1px solid red;
 }
+img { float: left;}
    </style> 
 <title>Page Title</title>
 </head>
 <body>
     <header>
+        <div class="c"> <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQtug66y0MyFh-iwEOs0hKKmQJ8cmLrfsghiw&usqp=CAU " width="50" height="60" >
+        </div>
         <h1>about me </h1>
-        <nav><a href="index.html">home</a></nav>
+      <ul>
+<li><a href="index.html">home</a> </li>
+<li><a href="https://calendar.google.com/calendar/u/0/r?pli=1">calender </a>
+</li>
+      </ul>  
 
-<nav>
-            <a href="https://calendar.google.com/calendar/u/0/r?pli=1">calender </a>
-        </nav>
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQtug66y0MyFh-iwEOs0hKKmQJ8cmLrfsghiw&usqp=CAU " width="50" height="60" >
+
+            
         <p>start from calender </p>
       
  
